update HistoryWindow.java editor and adder system update ReadingTrackerGUI.java buttons background operations