@@ -18,10 +18,11 @@ import java.util.Map;
 
 /**
  * Interfaz gráfica principal de Reading Tracker PRO.
- *
  * MEJORAS aplicadas:
- * - {@link SessionTimer} gestiona el cronómetro (separación de responsabilidades)
- * - LRU cache para portadas (máx. 30 entradas) evita crecimiento ilimitado de memoria
+ * - {@link SessionTimer} gestiona el cronómetro (separación de
+ * responsabilidades)
+ * - LRU cache para portadas (máx. 30 entradas) evita crecimiento ilimitado de
+ * memoria
  * - {@link WindowAdapter} avisa si se cierra con una sesión en marcha
  * - Indicador visual de sincronización pendiente en la barra de título
  * - Cálculos PPM/PPH delegados a {@link utils.ReadingCalculator}
@@ -38,7 +39,7 @@ public class ReadingTrackerGUI extends JFrame {
     };
 
     // ── MEJORA: Cronómetro extraído a su propia clase ─────────────────────────
-    private SessionTimer sessionTimer;
+    private final SessionTimer sessionTimer;
 
     // Componentes de la interfaz
     private BookSearchField libroSearch;
@@ -57,15 +58,18 @@ public class ReadingTrackerGUI extends JFrame {
     private int currentCoverIndex = 0;
 
     // Indicador de sync pendiente (actualizado periódicamente)
-    private Timer syncCheckTimer;
+    private final Timer syncCheckTimer;
 
     public ReadingTrackerGUI() {
         super("📚 Reading Tracker PRO");
 
         try {
-            if (utils.ConfigManager.isDarkMode()) FlatDarkLaf.setup();
-            else FlatLightLaf.setup();
-        } catch (Exception ignored) { }
+            if (utils.ConfigManager.isDarkMode())
+                FlatDarkLaf.setup();
+            else
+                FlatLightLaf.setup();
+        } catch (Exception ignored) {
+        }
 
         setSize(480, 720);
         setDefaultCloseOperation(JFrame.DO_NOTHING_ON_CLOSE); // MEJORA: controlar el cierre manualmente
@@ -82,7 +86,7 @@ public class ReadingTrackerGUI extends JFrame {
                             JOptionPane.YES_NO_CANCEL_OPTION,
                             JOptionPane.WARNING_MESSAGE,
                             null,
-                            new String[]{"Guardar y salir", "Salir sin guardar", "Cancelar"},
+                            new String[] { "Guardar y salir", "Salir sin guardar", "Cancelar" },
                             "Cancelar");
                     if (opcion == 0) {
                         // Guardar sesión y salir
@@ -116,13 +120,14 @@ public class ReadingTrackerGUI extends JFrame {
         }
 
         // ── MEJORA: Comprueba cada 60 s si hay sync pendiente y actualiza el título
-        syncCheckTimer = new Timer(60_000, e -> actualizarTituloConSyncStatus());
+        syncCheckTimer = new Timer(60_000, ignored -> actualizarTituloConSyncStatus());
         syncCheckTimer.start();
         actualizarTituloConSyncStatus(); // Primera comprobación inmediata
     }
 
     private void salirAplicacion() {
-        if (syncCheckTimer != null) syncCheckTimer.stop();
+        if (syncCheckTimer != null)
+            syncCheckTimer.stop();
         dispose();
         System.exit(0);
     }
@@ -167,11 +172,11 @@ public class ReadingTrackerGUI extends JFrame {
         coverLabel.setText("Sin Portada");
         coverLabel.setBorder(BorderFactory.createLineBorder(new Color(150, 150, 150, 50)));
 
-        correctaCoverBtn = createStyledButton("✓", new Color(46, 204, 113), Color.WHITE, false);
+        correctaCoverBtn = createStyledButton("✓", new Color(46, 204, 113));
         correctaCoverBtn.setToolTipText("Portada correcta");
-        otraCoverBtn = createStyledButton("↻", new Color(52, 152, 219), Color.WHITE, false);
+        otraCoverBtn = createStyledButton("↻", new Color(52, 152, 219));
         otraCoverBtn.setToolTipText("Buscar otra");
-        subirPortadaBtn = createStyledButton("Subir Portada", new Color(149, 165, 166), Color.WHITE, false);
+        subirPortadaBtn = createStyledButton("Subir Portada", new Color(149, 165, 166));
 
         coverOptionsPanel = new JPanel(new GridLayout(1, 2, 5, 0));
         coverOptionsPanel.setOpaque(false);
@@ -222,22 +227,34 @@ public class ReadingTrackerGUI extends JFrame {
         gbc.fill = GridBagConstraints.HORIZONTAL;
         gbc.insets = new Insets(5, 2, 5, 2);
 
-        gbc.gridx = 0; gbc.gridy = 0; gbc.weightx = 1.0;
+        gbc.gridx = 0;
+        gbc.gridy = 0;
+        gbc.weightx = 1.0;
         topPanel.add(new JLabel("📖 Selecciona tu lectura:"), gbc);
-        gbc.gridx = 1; gbc.weightx = 0.0;
+        gbc.gridx = 1;
+        gbc.weightx = 0.0;
         topPanel.add(rachaLabel, gbc);
 
-        gbc.gridx = 0; gbc.gridy = 1; gbc.weightx = 1.0;
+        gbc.gridx = 0;
+        gbc.gridy = 1;
+        gbc.weightx = 1.0;
         topPanel.add(libroSearch, gbc);
-        gbc.gridx = 1; gbc.weightx = 0.0;
+        gbc.gridx = 1;
+        gbc.weightx = 0.0;
         topPanel.add(darkModeBtn, gbc);
 
-        gbc.gridx = 0; gbc.gridy = 2; gbc.weightx = 1.0;
+        gbc.gridx = 0;
+        gbc.gridy = 2;
+        gbc.weightx = 1.0;
         topPanel.add(agregarLibroBtn, gbc);
-        gbc.gridx = 1; gbc.weightx = 0.0;
+        gbc.gridx = 1;
+        gbc.weightx = 0.0;
         topPanel.add(editarLibroBtn, gbc);
 
-        gbc.gridx = 0; gbc.gridy = 3; gbc.weightx = 1.0; gbc.gridwidth = 2;
+        gbc.gridx = 0;
+        gbc.gridy = 3;
+        gbc.weightx = 1.0;
+        gbc.gridwidth = 2;
         topPanel.add(eliminarLibroBtn, gbc);
         gbc.gridwidth = 1;
 
@@ -299,10 +316,14 @@ public class ReadingTrackerGUI extends JFrame {
 
     private void aplicarTema(boolean oscuro) {
         try {
-            if (oscuro) UIManager.setLookAndFeel(new FlatDarkLaf());
-            else UIManager.setLookAndFeel(new FlatLightLaf());
+            if (oscuro)
+                UIManager.setLookAndFeel(new FlatDarkLaf());
+            else
+                UIManager.setLookAndFeel(new FlatLightLaf());
             SwingUtilities.updateComponentTreeUI(this);
-        } catch (Exception e) { e.printStackTrace(); }
+        } catch (Exception ex) {
+            System.err.println("[ReadingTrackerGUI] Error al cambiar tema: " + ex.getMessage());
+        }
 
         Color bg = oscuro ? new Color(30, 30, 30) : new Color(245, 245, 245);
         Color fg = oscuro ? Color.WHITE : Color.BLACK;
@@ -315,10 +336,16 @@ public class ReadingTrackerGUI extends JFrame {
         actualizarVistaRacha();
     }
 
+    private void actualizarColoresUI() {
+        Color bg = esModoOscuro ? new Color(30, 30, 30) : new Color(245, 245, 245);
+        Color fg = esModoOscuro ? Color.WHITE : Color.BLACK;
+        Color inputBg = esModoOscuro ? new Color(50, 50, 50) : Color.WHITE;
+        cambiarColorRecursivo(mainPanel, bg, fg, inputBg, esModoOscuro);
+    }
+
     private void cambiarColorRecursivo(Container container, Color bg, Color fg, Color inputBg, boolean oscuro) {
         for (Component c : container.getComponents()) {
-            if (c instanceof JButton) {
-                JButton b = (JButton) c;
+            if (c instanceof JButton b) {
                 b.setOpaque(true);
                 b.setContentAreaFilled(true);
                 b.setBorder(BorderFactory.createLineBorder(oscuro ? new Color(60, 60, 60) : Color.LIGHT_GRAY));
@@ -342,7 +369,7 @@ public class ReadingTrackerGUI extends JFrame {
                 if (c == coverLabel) {
                     c.setBackground(oscuro ? new Color(45, 45, 45) : new Color(235, 235, 235));
                     c.setForeground(oscuro ? Color.LIGHT_GRAY : Color.GRAY);
-                } else if (c != lblEstimacion && c != lblPorcentaje) {
+                } else if (c != lblEstimacion && c != lblPorcentaje && c != rachaLabel) {
                     c.setForeground(fg);
                 }
             }
@@ -361,7 +388,7 @@ public class ReadingTrackerGUI extends JFrame {
             }
         });
 
-        darkModeBtn.addActionListener(e -> {
+        darkModeBtn.addActionListener(ignored -> {
             esModoOscuro = !esModoOscuro;
             utils.ConfigManager.setDarkMode(esModoOscuro);
             aplicarTema(esModoOscuro);
@@ -372,44 +399,48 @@ public class ReadingTrackerGUI extends JFrame {
                 int id = DatabaseManager.obtenerLibroId(libro);
                 estadoCombo.setEnabled(false);
                 String estado = DatabaseManager.obtenerEstadoLibro(id);
-                if (estado == null || estado.isEmpty()) estado = "Por leer";
+                if (estado == null || estado.isEmpty())
+                    estado = "Por leer";
                 estadoCombo.setSelectedItem(estado);
                 estadoCombo.setEnabled(true);
                 paginaInicioField.setText(String.valueOf(DatabaseManager.obtenerUltimaPaginaLeida(id)));
                 actualizarEstimacion();
                 resetearSesionLocal();
-                aplicarTema(esModoOscuro);
+                actualizarColoresUI();
                 cargarPortadaAsincrona(libro);
                 capituloField.requestFocusInWindow();
             }
         });
 
         // ── MEJORA: Iniciar/Pausar usan SessionTimer ──────────────────────────────
-        iniciarBtn.addActionListener(e -> {
+        iniciarBtn.addActionListener(ignored -> {
             sessionTimer.iniciar();
             iniciarBtn.setEnabled(false);
             pausarBtn.setEnabled(true);
-            aplicarTema(esModoOscuro);
+            actualizarColoresUI();
         });
 
-        pausarBtn.addActionListener(e -> {
+        pausarBtn.addActionListener(ignored -> {
             sessionTimer.pausar();
             iniciarBtn.setEnabled(true);
             pausarBtn.setEnabled(false);
-            aplicarTema(esModoOscuro);
+            actualizarColoresUI();
         });
 
-        terminarBtn.addActionListener(e -> {
+        terminarBtn.addActionListener(ignored -> {
             procesarTerminarSesion();
-            aplicarTema(esModoOscuro);
+            actualizarColoresUI();
         });
 
-        agregarLibroBtn.addActionListener(e -> {
+        agregarLibroBtn.addActionListener(ignored -> {
             String nombre = JOptionPane.showInputDialog(this, "Nombre del nuevo libro:");
             if (nombre != null && !nombre.trim().isEmpty()) {
                 String pagsStr = JOptionPane.showInputDialog(this, "Número total de páginas (opcional):", "0");
                 int pags = 0;
-                try { pags = Integer.parseInt(pagsStr); } catch (Exception ex) { }
+                try {
+                    pags = Integer.parseInt(pagsStr);
+                } catch (NumberFormatException ex) {
+                    /* valor por defecto 0 */ }
                 DatabaseManager.guardarLibro(nombre.trim(), pags);
                 actualizarComboLibros();
                 libroSearch.setSelectedBook(nombre.trim());
@@ -420,9 +451,10 @@ public class ReadingTrackerGUI extends JFrame {
             }
         });
 
-        editarLibroBtn.addActionListener(e -> {
+        editarLibroBtn.addActionListener(ignored -> {
             String libro = libroSearch.getSelectedBook();
-            if (libro == null) return;
+            if (libro == null)
+                return;
             String pagsStr = JOptionPane.showInputDialog(this, "Editar total de páginas para '" + libro + "':");
             if (pagsStr != null) {
                 try {
@@ -436,9 +468,12 @@ public class ReadingTrackerGUI extends JFrame {
             }
         });
 
-        eliminarLibroBtn.addActionListener(e -> {
+        eliminarLibroBtn.addActionListener(ignored -> {
             String libro = libroSearch.getSelectedBook();
-            if (libro == null) { JOptionPane.showMessageDialog(this, "⚠️ Selecciona un libro primero."); return; }
+            if (libro == null) {
+                JOptionPane.showMessageDialog(this, "⚠️ Selecciona un libro primero.");
+                return;
+            }
             int confirmacion = JOptionPane.showConfirmDialog(this,
                     "¿Estás seguro de que quieres eliminar \"" + libro + "\"?\n\n"
                             + "Se eliminarán también todas sus sesiones de lectura.\n"
@@ -464,12 +499,12 @@ public class ReadingTrackerGUI extends JFrame {
             }
         });
 
-        verGraficoBtn.addActionListener(e -> {
+        verGraficoBtn.addActionListener(ignored -> {
             String libro = libroSearch.getSelectedBook();
             new GraphWindow(esModoOscuro, libro).setVisible(true);
         });
 
-        historialBtn.addActionListener(e -> {
+        historialBtn.addActionListener(ignored -> {
             String libroSeleccionado = libroSearch.getSelectedBook();
             if (libroSeleccionado != null) {
                 int libroId = DatabaseManager.obtenerLibroId(libroSeleccionado);
@@ -504,14 +539,14 @@ public class ReadingTrackerGUI extends JFrame {
             }
         });
 
-        otraCoverBtn.addActionListener(e -> {
+        otraCoverBtn.addActionListener(ignored -> {
             if (!currentCoverUrls.isEmpty()) {
                 currentCoverIndex = (currentCoverIndex + 1) % currentCoverUrls.size();
                 mostrarPortadaLocal(currentCoverUrls.get(currentCoverIndex));
             }
         });
 
-        correctaCoverBtn.addActionListener(e -> {
+        correctaCoverBtn.addActionListener(ignored -> {
             String libro = libroSearch.getSelectedBook();
             if (libro != null && !currentCoverUrls.isEmpty()) {
                 int libroId = DatabaseManager.obtenerLibroId(libro);
@@ -522,9 +557,12 @@ public class ReadingTrackerGUI extends JFrame {
             }
         });
 
-        subirPortadaBtn.addActionListener(e -> {
+        subirPortadaBtn.addActionListener(ignored -> {
             String libro = libroSearch.getSelectedBook();
-            if (libro == null) { JOptionPane.showMessageDialog(this, "Selecciona un libro primero."); return; }
+            if (libro == null) {
+                JOptionPane.showMessageDialog(this, "Selecciona un libro primero.");
+                return;
+            }
 
             JFileChooser chooser = new JFileChooser();
             chooser.setDialogTitle("Seleccionar Portada para: " + libro);
@@ -536,7 +574,8 @@ public class ReadingTrackerGUI extends JFrame {
                 int libroId = DatabaseManager.obtenerLibroId(libro);
                 String fileName = selectedFile.getName();
                 String extension = fileName.contains(".")
-                        ? fileName.substring(fileName.lastIndexOf('.') + 1) : "jpg";
+                        ? fileName.substring(fileName.lastIndexOf('.') + 1)
+                        : "jpg";
 
                 subirPortadaBtn.setEnabled(false);
                 subirPortadaBtn.setText("Subiendo...");
@@ -545,8 +584,10 @@ public class ReadingTrackerGUI extends JFrame {
                     @Override
                     protected String doInBackground() {
                         if (!utils.ConfigManager.isOfflineMode()) {
-                            String remoteUrl = utils.BookCoverService.subirPortadaASupabase(selectedFile, libroId, extension);
-                            if (remoteUrl != null) return remoteUrl;
+                            String remoteUrl = utils.BookCoverService.subirPortadaASupabase(selectedFile, libroId,
+                                    extension);
+                            if (remoteUrl != null)
+                                return remoteUrl;
                             System.err.println("[GUI] Fallo al subir a Supabase, usando copia local como fallback.");
                         }
                         return utils.FileUtil.saveBookCover(selectedFile, libroId);
@@ -569,18 +610,21 @@ public class ReadingTrackerGUI extends JFrame {
                                 if (!coverUrl.startsWith("http")) {
                                     JOptionPane.showMessageDialog(ReadingTrackerGUI.this,
                                             "⚠️ Portada guardada solo en este equipo.\n" +
-                                                    "No se pudo subir a la nube.", "Portada local", JOptionPane.WARNING_MESSAGE);
+                                                    "No se pudo subir a la nube.",
+                                            "Portada local", JOptionPane.WARNING_MESSAGE);
                                 } else {
                                     JOptionPane.showMessageDialog(ReadingTrackerGUI.this,
                                             "✅ Portada subida a la nube.\nEstarás disponible desde cualquier equipo.");
                                 }
                             } else {
-                                JOptionPane.showMessageDialog(ReadingTrackerGUI.this, "❌ No se pudo guardar la portada.");
+                                JOptionPane.showMessageDialog(ReadingTrackerGUI.this,
+                                        "❌ No se pudo guardar la portada.");
                             }
                         } catch (Exception ex) {
                             subirPortadaBtn.setEnabled(true);
                             subirPortadaBtn.setText("Subir Portada");
-                            JOptionPane.showMessageDialog(ReadingTrackerGUI.this, "❌ Error inesperado: " + ex.getMessage());
+                            JOptionPane.showMessageDialog(ReadingTrackerGUI.this,
+                                    "❌ Error inesperado: " + ex.getMessage());
                         }
                     }
                 }.execute();
@@ -609,7 +653,7 @@ public class ReadingTrackerGUI extends JFrame {
             private boolean isSavedCover = false;
 
             @Override
-            protected Void doInBackground() throws Exception {
+            protected Void doInBackground() {
                 int libroId = DatabaseManager.obtenerLibroId(tituloLibro);
                 String savedUrl = DatabaseManager.obtenerCoverUrl(libroId);
 
@@ -623,7 +667,7 @@ public class ReadingTrackerGUI extends JFrame {
                     currentCoverUrls = utils.BookCoverService.fetchCoverUrls(tituloLibro);
                     currentCoverIndex = 0;
                     if (!currentCoverUrls.isEmpty()) {
-                        String firstUrl = currentCoverUrls.get(0);
+                        String firstUrl = currentCoverUrls.getFirst();
                         finalImage = cachePortadas.computeIfAbsent(firstUrl, url -> {
                             java.awt.image.BufferedImage img = utils.BookCoverService.downloadImage(url);
                             return img != null ? img.getScaledInstance(120, 170, Image.SCALE_SMOOTH) : null;
@@ -669,7 +713,7 @@ public class ReadingTrackerGUI extends JFrame {
 
         new SwingWorker<Image, Void>() {
             @Override
-            protected Image doInBackground() throws Exception {
+            protected Image doInBackground() {
                 java.awt.image.BufferedImage img = utils.BookCoverService.downloadImage(url);
                 return img != null ? img.getScaledInstance(120, 170, Image.SCALE_SMOOTH) : null;
             }
@@ -678,10 +722,12 @@ public class ReadingTrackerGUI extends JFrame {
             protected void done() {
                 try {
                     Image resultImage = get();
-                    if (resultImage != null) cachePortadas.put(url, resultImage);
+                    if (resultImage != null)
+                        cachePortadas.put(url, resultImage);
                     coverLabel.setText("");
                     coverLabel.setIcon(resultImage != null ? new ImageIcon(resultImage) : null);
-                    if (resultImage == null) coverLabel.setText("Sin portada");
+                    if (resultImage == null)
+                        coverLabel.setText("Sin portada");
                 } catch (Exception e) {
                     coverLabel.setText("Error");
                 }
@@ -752,11 +798,16 @@ public class ReadingTrackerGUI extends JFrame {
 
             DatabaseManager.guardarSesion(id, capituloField.getText(), pIni, pFin, pagsLeidas, mins, ppm, pph, fecha);
 
-            String mensajeResumen = String.format(
-                    "📚 RESUMEN DE LECTURA\n---------------------------\n" +
-                            "📖 Título: %s\n⏱️ Tiempo: %.2f min\n📄 Páginas: %d\n" +
-                            "🚀 Velocidad: %.2f ppm\n📅 Fecha: %s\n---------------------------",
-                    tituloLibro, mins, pagsLeidas, ppm, fecha);
+            String mensajeResumen = """
+                    📚 RESUMEN DE LECTURA
+                    ---------------------------
+                    📖 Título: %s
+                    ⏱️ Tiempo: %.2f min
+                    📄 Páginas: %d
+                    🚀 Velocidad: %.2f ppm
+                    📅 Fecha: %s
+                    ---------------------------"""
+                    .formatted(tituloLibro, mins, pagsLeidas, ppm, fecha);
             JOptionPane.showMessageDialog(this, mensajeResumen, "Sesión Finalizada", JOptionPane.INFORMATION_MESSAGE);
 
             resetearSesionLocal();
@@ -774,13 +825,13 @@ public class ReadingTrackerGUI extends JFrame {
         }
     }
 
-    private JButton createStyledButton(String text, Color bg, Color fg, boolean isBordered) {
+    private JButton createStyledButton(String text, Color bg) {
         JButton btn = new JButton(text);
         btn.setBackground(bg);
-        btn.setForeground(fg);
+        btn.setForeground(Color.WHITE);
         btn.setFont(new Font("SansSerif", Font.BOLD, 12));
         btn.setFocusPainted(false);
-        btn.setBorderPainted(isBordered);
+        btn.setBorderPainted(false);
         btn.setOpaque(true);
         btn.setCursor(new Cursor(Cursor.HAND_CURSOR));
         return btn;
@@ -794,6 +845,7 @@ public class ReadingTrackerGUI extends JFrame {
         rachaLabel.setText(String.format("🎯 Meta: %d/%d | 🔥 Racha: %d %s",
                 leidasHoy, meta, racha, (racha == 1 ? "día" : "días")));
         rachaLabel.setForeground(leidasHoy >= meta && meta > 0
-                ? new Color(46, 204, 113) : new Color(255, 140, 0));
+                ? new Color(46, 204, 113)
+                : new Color(255, 140, 0));
     }
 }
